// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartView pass props correctly 1`] = `
<styled.div>
  <Styled(Card)
    title={
      <styled.div>
        Hello, 
        Mary
        !
      </styled.div>
    }
  />
</styled.div>
`;

exports[`StartView renders component without crashing 1`] = `
<styled.div>
  <Styled(Card)
    title={
      <styled.div>
        Hello, 
        !
      </styled.div>
    }
  />
</styled.div>
`;
